Bug 688044 - ASSERTION: Why is the root in mDirtyRoots already?  r=bzbarsky